Fix display fllex layout bugs, adjust mobile view

--- a/frontend/css/todos.css
+++ b/frontend/css/todos.css
@@ -63,13 +63,13 @@ h1{
 .todoTitleBox{
     display: flex;
     justify-content: center;
-    /* animation: titlebox-anim 10s ease-out infinite; */
+    animation: titlebox-anim 10s ease-out infinite;
     transition: 0.5s;
     font-weight: 700;
     font-size: xx-large;
     text-align: center;
     background: radial-gradient(circle at 70% 30%, white, rgb(232, 248, 251));
-    padding: 8vh;
+    padding: 4vw;
     margin-bottom: 2vh;
     border-radius: 48%;
     box-shadow: 2px 4px 15px 0px rgb(235 235 229);
@@ -97,7 +97,7 @@ h1{
 }
 
 .textArea{
-    /* animation: textarea-anim 10s ease-out infinite; */
+    animation: textarea-anim 10s ease-out infinite;
     display: flex;
     text-align: center;
     justify-content: center;
@@ -105,7 +105,7 @@ h1{
     outline: none;
     letter-spacing: 0.2em;
     font-family: 'Caveat', cursive;
-    padding: 6vh;
+    padding: 5vw;
     font-size: x-large;
     border-radius: 48%;
     resize: none;
@@ -186,7 +186,6 @@ input:focus{
 
 .TodoListContainer{
     /* display: flex; */
-
 }
 
 .appContainer{
@@ -226,10 +225,9 @@ input:focus{
 .todoItemContainer{
     display: flex;
     flex-direction: column;
-    z-index: 2;
+    align-items: center;
+
 } 
-
-
 .todoItem{
     display: flex;
     flex-direction: column;
@@ -351,7 +349,7 @@ input:focus{
     transition: opacity 1000ms, transform 1000ms;
 }
 
-/* .autodone-leave {
+.autodone-leave {
     opacity: 1;
     transform: translateX(0);
 }
@@ -360,7 +358,7 @@ input:focus{
     opacity: 0.01;
     transform: translateX(300%);
     transition: opacity 1000ms, transform 2000ms;
-} */
+}
 
 /* STEPS  */
 
@@ -386,7 +384,7 @@ input:focus{
     flex-direction: column;
     background: #6ca3d3;
     max-height: 90%;
-    z-index: 100;
+    /* z-index: 100; */
 }
 
 .StepsBackground {
@@ -396,7 +394,7 @@ input:focus{
   right: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.7);
-  z-index: 51;
+  z-index: 99;
 }
 
 .todoDetailVisible{
